--- a/style.css
+++ b/style.css
@@ -8,11 +8,6 @@ body {
     flex-direction: row;
 }
 
-img {
-    display: block;
-    width: 100%;
-    height: 100%;
-}
 .left {
     flex: 10;
 }
@@ -20,7 +15,7 @@ img {
     flex: 0;
 }
 
-.top-left {
+/* .top-left {
     height: 10vh;
 }
 .bottom-left {
@@ -31,12 +26,77 @@ img {
 }
 .bottom-right {
     height: 90vh;
+} */
+
+@keyframes heightChange {
+    0% {
+        height: 10vh;
+    }
+    50% {
+        height: 80vh;
+    }
+    100% {
+        height: 20vh;
+    }
 }
 
-.top-left, .top-right, .bottom-left, .bottom-right {
-    transition: height 0.5s ease-in-out;
+@keyframes heightChangeReverse {
+    0% {
+        height: 90vh;
+    }
+    50% {
+        height: 20vh;
+    }
+    100% {
+        height: 80vh;
+    }
 }
 
+@keyframes flexChange {
+    0% {
+        flex: 10;
+    }
+    100% {
+        flex: 0;
+    }
+}
+
+@keyframes flexChangeReverse {
+    0% {
+        flex: 0;
+    }
+    100% {
+        flex: 10;
+    }
+}
+
+.top-left, .bottom-left, .top-right, .bottom-right {
+    animation-duration: 15s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+.top-left, .top-right {
+    animation-name: heightChange;
+}
+
+.bottom-left, .bottom-right {
+    animation-name: heightChangeReverse;
+}
+
+/* 전체 높이 애니메이션이 끝난 후 flex 변경 */
 .left, .right {
-    transition: flex 0.5s ease-in-out;
+    animation-delay: 0s;
+    animation-duration: 15s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+}
+
+.left {
+    animation-name: flexChange;
+}
+
+.right {
+    animation-name: flexChangeReverse;
 }
