--- a/style.css
+++ b/style.css
@@ -15,18 +15,11 @@ body {
     flex: 0;
 }
 
-/* .top-left {
-    height: 10vh;
+img {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
-.bottom-left {
-    height: 90vh;
-}
-.top-right {
-    height: 10vh;
-}
-.bottom-right {
-    height: 90vh;
-} */
 
 @keyframes heightChange {
     0% {
