--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
+/* 기본 배경 */
 body {
     margin: 0;
+}
+
+/* A - Chrome */
+body.chrome {
     background: linear-gradient(180deg, #F23121 0%, #D23428 14%, #A03831 27.5%, #6E2F2C 50.5%, #63506B 72.5%, #536AAD 86%, #4478E6 100%);
+}
+
+/* B - Safari */
+body.safari {
+    background: linear-gradient(180deg, #E492E0 0%, #9F669C 25%, #681A3D 50.5%, #3C391F 76.5%, #364F04 100%);
+}
+
+/* C - Firefox */
+body.firefox {
+    background: linear-gradient(180deg, #F5ED5D 0%, #F78C3A 25%, #2D2455 50.5%, #655B91 76.5%, #3B51B9 100%);
 }
 .container {
     height: 100vh;
@@ -19,6 +34,9 @@ img {
     display: block;
     width: 100%;
     height: 100%;
+}
+.hide {
+    display: none;
 }
 
 @keyframes heightChange {
